--- a/index.html
+++ b/index.html
@@ -12,21 +12,16 @@
         }
         
         body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.55;
-    color: #e5e7eb;
-    background: #0f172a;
-
-    /* Web-friendly layout */
-    width: 100%;
-    max-width: 1200px;
-    min-height: 100vh;
-    margin: 0 auto;
-    padding: 32px;
-    overflow: auto;
-}
-
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+            font-size: 10px;
+            line-height: 1.4;
+            color: #e5e7eb;
+            background: #0f172a;
+            width: 8.5in;
+            height: 11in;
+            margin: 0 auto;
+            padding: 0.35in;
+            overflow: hidden;
         }
         
         /* Corner brackets */
